--- a/values.yaml
+++ b/values.yaml
@@ -1,22 +1,11 @@
 shiny:
   image:
-    repository: inseefrlab/shiny-app-template
-    tag: "1.0.1"
+    repository: jean-seb-2106/statconcepts
+    tag: "1.0"
   ingress:
     enabled: true
-    hostname: myshinyapp.lab.sspcloud.fr
+    hostname: statconcepts.lab.sspcloud.fr
   s3:
-    enabled: true
-    existingSecret: myshinyapp-s3
+    enabled: false
   postgresql:
-    enabled: true
-    auth:
-      username: myusername
-      database: defaultdb
-      existingSecret: myshinyapp-postgresql
-    containerPorts:
-      postgresql: 5432
-    fullnameOverride: postgresql-db
-    primary:
-      persistence:
-        size: 2Gi
+    enabled: false
