--- a/values.yaml
+++ b/values.yaml
@@ -1,7 +1,7 @@
 shiny:
   image:
-    repository: jean-seb-2106/statconcepts
-    tag: "1.0"
+    repository: jeanseb2106/statconcepts
+    tag: "v1.0"
   ingress:
     enabled: true
     hostname: statconcepts.lab.sspcloud.fr
